  (pour proposer un CDT personnel aux professeurs, indépendamment d'un autre CDT
   éventuellement rempli par les professeurs sur un ENT pour les élèves,...).

Discipline:
- Possibilité d'ouvrir le paramétrage du pointage des menus incidents à des 
  utilisateurs non administrateur (typiquement tel CPE).
- Possibilité d'extraire en CSV les bilans de pointages de menus incidents.

LSUN:
- Possibilité de n'extraire qu'une ou certaines périodes.

Genèse des classes:
- Possibilité d'utiliser un autre type de profil élève mêlant comportement et niveau scolaire.

Général:
- Possibilité de saisir les modalités d'accompagnement en compte scolarité
  (conditionné par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité de saisir/corriger les numéros de téléphone et mail en compte cpe et scolarité.
  (conditionné pour les CPE par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité d'afficher un message invitant les visiteurs à accepter les cookies du Gepi
  (paramétrable en administrateur dans Gestion générale/Options de connexion).
- Possibilité de trier la liste des sauvegardes par taille, par date.
- Possibilité d'importer le fichier Communs.xml de Siècle pour avoir 
  la bonne date de début d'année (pour LSUN) et mettre à jour diverses informations 
  générales sur l'établissement.

Bibliothèques:
- Mise à jour de HTMLPurifier en version 4.9.3


Gepi-1.7.1 (30/03/2017)
===========================

Absences 2:
- Possibilité de donner des droits de consultation/modification de certains 
  paramètres ABS2 à des non-administrateurs (typiquement tel CPE).
- Possibilité de ne pas afficher les saisies correspondant aux Marques d'appel.
- Possibilité de ne pas enregistrer un marqueur d'appel lorsque plusieurs saisies 
  sont faites sur le même créneau/groupe,...
- Bilan individuel: Possibilité de ne pas afficher/exporter les saisies englobées.

Bulletins:
- Ajout d'un témoin sur le cycle et le niveau de chaque élève pour repérer un 