@@ -45,6 +45,12 @@ $mode_auto=isset($_POST['mode_auto']) ? $_POST['mode_auto'] : (isset($_GET['mode
 
 //debug_var();
 
+$mod_disc_terme_menus_incidents=getSettingValue("mod_disc_terme_menus_incidents");
+if($mod_disc_terme_menus_incidents=="") {
+	$mod_disc_terme_menus_incidents="menus incidents";
+}
+
+
 if((isset($_POST['mode']))&&($_POST['mode']=='suppr_assoc_doublon')) {
 	check_token();
 
@@ -3968,7 +3974,40 @@ elseif (isset($_POST['action']) AND $_POST['action'] == 'check_auto_increment') 
 
 		echo "<p>Terminé.</p>\n";
 	}
+} elseif (isset($_POST['action']) AND $_POST['action'] == 'vidage_mod_discipline_menus_incidents_date') {
+	echo "<p class=bold><a href='../accueil.php'><img src='../images/icons/back.png' alt='Retour' class='back_link'/> Retour accueil</a> ";
+	echo "| <a href='clean_tables.php'>Retour page Vérification / Nettoyage des tables</a>\n";
+	echo "</p>\n";
 
+	$date_limite=isset($_POST['date_limite']) ? $_POST['date_limite'] : NULL;
+	if((!isset($date_limite))||($date_limite=="")) {
+		echo "<p style='color:red'>Suppression des $mod_disc_terme_menus_incidents impossible&nbp;: date invalide.</p>";
+	}
+	elseif(!preg_match("#^[0-9]{1,2}/[0-9]{1,2}/[0-9]{4}$#", $date_limite)) {
+		echo "<p style='color:red'>Suppression des $mod_disc_terme_menus_incidents impossible&nbp;: date '$date_limite' invalide.</p>";
+	}
+	else {
+		echo "<p><b>Suppression des $mod_disc_terme_menus_incidents pour une date antérieure à ".$date_limite."&nbsp;:</b><br />\n";
+		$mysql_date_limite=get_mysql_date_from_slash_date($date_limite, "n");
+
+		$sql="SELECT * FROM sp_saisies WHERE date_sp<='".$mysql_date_limite."';";
+		//echo "$sql<br />\n";
+		$res=mysqli_query($GLOBALS["mysqli"], $sql);
+		if(mysqli_num_rows($res)>0) {
+			echo mysqli_num_rows($res)." $mod_disc_terme_menus_incidents&nbsp;: ";
+			$sql="DELETE FROM sp_saisies WHERE date_sp<='".$mysql_date_limite."';";
+			//echo "$sql<br />\n";
+			$del=mysqli_query($GLOBALS["mysqli"], $sql);
+			if($del) {
+				echo " <span style='color:green'>supprimés</span><br />";
+			}
+			else {
+				echo " <span style='color:red'>erreur lors de la suppression</span><br />";
+			}
+		}
+
+		echo "<p>Terminé.</p>\n";
+	}
 } elseif (isset($_POST['action']) AND $_POST['action'] == 'nettoyage_mod_discipline') {
 	echo "<p class=bold><a href='../accueil.php'><img src='../images/icons/back.png' alt='Retour' class='back_link'/> Retour accueil</a> ";
 	echo "| <a href='clean_tables.php'>Retour page Vérification / Nettoyage des tables</a>\n";
@@ -5199,7 +5238,37 @@ else {
 		echo "</form>\n";
 
 		echo "<hr />\n";
-	
+
+		echo "<p>Dans le cas où les $mod_disc_terme_menus_incidents n'auraient pas été supprimés au changement d'année, vous pouvez en effectuer la suppression pour tout ce qui est antérieur à une date choisie.</p>\n";
+		echo "<form action=\"clean_tables.php\" method=\"post\">\n";
+		echo add_token_field();
+		echo "<center>\n";
+
+		$sql="SELECT * FROM sp_saisies ORDER BY date_sp LIMIT 1;";
+		//echo "$sql<br />\n";
+		$res=mysqli_query($GLOBALS["mysqli"], $sql);
+		if(mysqli_num_rows($res)>0) {
+			$lig=mysqli_fetch_object($res);
+			$msg_sp="<p>Le ".$mod_disc_terme_menus_incidents." le plus ancien date du ".formate_date($lig->date_sp)."</p>";
+		}
+		else {
+			$msg_sp="<p>Aucun ".$mod_disc_terme_menus_incidents." n'est enregistré dans la base.</p>";
+		}
+		echo $msg_sp;
+
+		$annee=strftime("%Y");
+		$mois=strftime("%m");
+		if($mois<=7) {$annee--;}
+		echo "Pour les $mod_disc_terme_menus_incidents antérieurs au <input type='text' name='date_limite' id='date_limite_disc' size='10' value='31/07/$annee' onKeyDown=\"clavier_date(this.id,event);\" AutoComplete=\"off\" title=\"Vous pouvez modifier la date à l'aide des flèches Up et Down du pavé de direction.\" />\n";
+		echo img_calendrier_js("date_limite_disc", "img_bouton_date_limite_disc")."<br />";
+
+		echo "<input type=submit value=\"Supprimer les $mod_disc_terme_menus_incidents antérieurs à la date ci-dessus\" />\n";
+		echo "</center>\n";
+		echo "<input type='hidden' name='action' value='vidage_mod_discipline_menus_incidents_date' />\n";
+		echo "</form>\n";
+
+		echo "<hr />\n";
+
 		echo "<p>Au changement d'année, il faut <a href='../cahier_texte_2/archivage_cdt.php'>archiver les Cahiers de Textes</a>, puis le vider.</p>\n";
 		echo "<form action=\"clean_tables.php\" method=\"post\">\n";
 		echo add_token_field();
