@@ -36,6 +36,8 @@ Discipline:
 - Possibilité d'ouvrir le paramétrage du pointage des menus incidents à des 
   utilisateurs non administrateur (typiquement tel CPE).
 - Possibilité d'extraire en CSV les bilans de pointages de menus incidents.
+- Possibilité de supprimer manuellement les pointages de menus incidents 
+  pour une date antérieure à telle date.
 
 LSUN:
 - Possibilité de n'extraire qu'une ou certaines périodes.
